--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Erste Webseite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Klima und Wasser</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 <body>
-    <h1>Hallo, Welt!</h1>
+    <h1>Interaktive Klimadaten-Karte</h1>
+    <div id="map" style="height: 500px;"></div>
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
